# juvera-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  publish.yml
claude-plugin/: README.md  mcp.json
claude-plugin/.claude-plugin/: plugin.json
claude-plugin/commands/: juvera-instrument.md  juvera.md
claude-plugin/juvera_mcp/: requirements.txt  server.py
claude-plugin/skills/juvera-instrument/: SKILL.md
examples/: 01_manual_instrumentation.py  02_openai_assistant.py  03_langchain_agent.py  04_decorator_instrumentation.py  05_minimal_setup.py  local_debug.py  support_roi.py  support_v016_demo.py
juvera_sdk/: __init__.py  _fmt.py  cli.py  config.py  context.py  costs.py  decorators.py  demo.py  events.py  frameworks.py  handoff.py  local_relay.py  local_storage.py  normalizer.py  processor.py  report.py  roi.py  signals.py  span.py  telemetry.py  tracer.py  user_config.py  wrappers.py
juvera_sdk/baselines/: CHANGELOG.md  code_review.md  compliance_check.md  content_generation.md  data_extraction.md  document_review.md  lead_qualification.md  ticket_deflection.md
juvera_sdk/compliance/: pii.py
juvera_sdk/data/: model_pricing.json
juvera_sdk/exporters/: debug.py  http.py  mock.py
juvera_sdk/schema/: impact_signal.py
juvera_sdk/templates/: report.html.j2
tests/: conftest.py  test_attach_mode.py  test_backward_compat.py  test_baselines_sync.py  test_config.py  test_config_cli.py  test_cost_capture.py  test_costs.py  test_costs_catalog_lookup.py  test_decorators.py  test_demo_card.py  test_demo_cli.py  test_demo_generator.py  test_estimate_roi_init_compat.py  test_estimate_roi_provenance.py  test_estimate_roi_pure.py  test_fmt.py  test_handoff.py  test_listen_keyless.py  test_listen_upload_best_effort.py  test_local_relay.py  test_local_storage.py  test_metrics_counters.py  test_mock_exporter.py  test_normalizer.py  test_packaging.py  test_pii.py  test_processor.py  test_prompt_completion.py  test_record_event.py  test_relay_otlp_normalization.py  test_report_cli.py  test_report_filters.py  test_report_html.py  test_resolve_baseline.py  test_roi.py  test_run_summary.py  test_signals.py  test_span.py  test_telemetry_consent.py  (+8 more)
