[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "juvera-sdk"
version = "0.1.2"
description = "Open instrumentation SDK for Juvera — emit agent telemetry and business-impact signals"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
dependencies = [
  "opentelemetry-sdk>=1.20,<2.0",
  "pydantic>=2.0,<3.0",
  "httpx>=0.27,<1.0",
  "jsonschema>=4.0,<5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "respx>=0.21",
  "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
include = ["juvera_sdk*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
