[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "juvera-sdk"
version = "0.1.8"
description = "Open instrumentation SDK for Juvera — emit agent telemetry and business-impact signals"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
dependencies = [
  "opentelemetry-sdk>=1.20,<2.0",
  "pydantic>=2.0,<3.0",
  "httpx>=0.27,<1.0",
  "jsonschema>=4.0,<5.0",
]

[project.scripts]
juvera = "juvera_sdk.cli:main"

[project.optional-dependencies]
openai = [
  "openai>=1.0",
]
anthropic = [
  "anthropic>=0.30",
]
"openai-agents" = [
  "openai-agents>=0.0.10",
]
langgraph = [
  "openinference-instrumentation-langgraph>=0.1",
]
langchain = [
  "openinference-instrumentation-langchain>=0.1",
]
crewai = [
  "crewai>=0.40",
]
autogen = [
  "pyautogen>=0.2",
]
dev = [
  "pytest>=8.0",
  "respx>=0.21",
  "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
include = ["juvera_sdk*"]

[tool.setuptools.package-data]
"*" = ["claude-plugin/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
